# FedeNet

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  coverage.xml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
fedenet/: __init__.py  export.py  hubconf.py  models.py  transforms.py  utils.py  weights.py
tests/: test_export.py  test_freqmaps.py  test_hubconf.py  test_inference.py  test_models_misc.py  test_transforms_more.py  test_utils_weights.py  test_weights.py
